--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "prettier": "^2.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-promise-tracker": "^2.1.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-window-size-listener": "^1.5.4",
     "validator": "^13.5.2",
     "web-vitals": "^1.1.0"
   },
